# 3d_viewer

./: README.md
misc/images/: spider2
src/: Doxyfile  Makefile  main.cpp
src/cmake/: CMakeLists.txt
src/controller/: s21_controller.cpp  s21_controller.h
src/model/: s21_model.cpp  s21_model.h  s21_model_facade.cpp  s21_model_facade.h  s21_obj_loader.cpp  s21_obj_loader.h  s21_transformation_strategy.cpp  s21_transformation_strategy.h
src/test/: s21_tests.cpp  s21_tests.h
src/view/: color_shader.frag  geometry_shader.glsl  s21_error_dialog.cpp  s21_error_dialog.h  s21_error_dialog.ui  s21_gif_recorder.cpp  s21_gif_recorder.h  s21_mainwindow.cpp  s21_mainwindow.h  s21_mainwindow.ui  s21_openGL_widget.cpp  s21_openGL_widget.h  shaders.qrc  transform_shader.vert
